2012-01-21 Thomas Ernst <typo3@thernst.de>
		* [Bug #33347] Issue during upload of 0.7.0 causes version to be increased to 0.16.0
		* Defined cal compatibility from version 1.3.3 (no security issue) up to 1.4.2 (current version)
		* Status is now "Stable"
		* Published version 0.16.0 (due to an issue when uploading 0.7.0, that version was uploaded several times, up to 0.15.0)

2012-01-19 Thomas Ernst <typo3@thernst.de>
		* [Bug #33276] 	Display messages if registration is not possible (thanks to G. Hoelzl)		

2012-01-18 Thomas Ernst <typo3@thernst.de>
		* [Bug #33275] 	Leave processing earlier if registration is not activated (thanks to G. Hoelzl)		

2012-01-09 Thomas Ernst <typo3@thernst.de>
		* [Bug #33074] Wrong check of "adminUsers"-Parameter (thanks to G. Hoelzl)

2011-12-17 Thomas Ernst <typo3@thernst.de>
        * [Bug #32647] needToLogin form is being displayed, even if registration is not possible
        * [Feature #30523] Deadline for registration more flexible
        * [Bug #32645] Even after the registration period and the event, it is possible to unregister
        * [Bug #32648] Submit buttons showed in list view, even if no events with activated registrations displayed
        * [Feature #32649] Disable displaying of error messages in frontend

2011-12-16 Thomas Ernst <typo3@thernst.de>
        * [Feature #28414] Free places (and other event-specific markers) can be used even if no user is logged in.

2011-11-25 Thomas Ernst <typo3@thernst.de>
        * Compatibility to cal 1.4.x (Classic/Standard template)
        * Services where not working with Typo3 4.6/Cal 1.4.x
        * Updated manuals
        * [Bug #28416] disableUnregister not working in list registration
        * Published Version 0.7.0

2011-11-17 Thomas Ernst	<typo3@thernst.de>
	* Compatibility to Typo3 4.6: Removed usage of deprecated function t3lib_div::GParrayMerged

2011-10-27 Thomas Ernst	<typo3@thernst.de>
	* Finished german manual
	* corrections on english manual
	