@@ -1,3 +1,6 @@
+2012-01-26 Thomas Ernst <typo3@thernst.de>
+		* [Bug #33453] register4cal uses deprecated call-time pass-by-reference		
+
 2012-01-21 Thomas Ernst <typo3@thernst.de>
 		* [Bug #33347] Issue during upload of 0.7.0 causes version to be increased to 0.16.0
 		* Defined cal compatibility from version 1.3.3 (no security issue) up to 1.4.2 (current version)
